--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>Last updated: Weekly Game Drop — Weekly Game Drop does not collect, store, or share any personal data.</p>
+  <p>Last updated: Weekly Game Drop</p>
 
   <h2>Overview</h2>
-  <p><strong>Weekly Game Drop</strong> is an unofficial fan app that displays weekly free game listings retrieved from the Epic Games public endpoints via a proxy. The app does not require user account creation and does not collect personal information.</p>
+  <p><strong>Weekly Game Drop</strong> is an unofficial fan app that displays weekly free game listings retrieved from the Epic Games public endpoints via a proxy. The app does not require user account creation and does not collect personal information directly. However, the app displays advertisements through the Google Mobile Ads SDK.</p>
 
   <h2>Data Collection</h2>
   <ul>
-    <li><strong>Personal Data:</strong> Not collected.</li>
+    <li><strong>Personal Data:</strong> Not collected directly by the app.</li>
     <li><strong>Sensitive Data:</strong> Not collected.</li>
     <li><strong>Location:</strong> Not collected.</li>
-    <li><strong>Device or Other IDs:</strong> Not collected.</li>
+    <li><strong>Device or Other IDs:</strong> Google Mobile Ads SDK may use device identifiers such as the Advertising ID for ad serving and fraud prevention.</li>
     <li><strong>In-App Analytics:</strong> Not used.</li>
-    <li><strong>Advertising:</strong> Not used.</li>
+    <li><strong>Advertising:</strong> The app uses Google Mobile Ads (AdMob) to display ads. This service may collect non-personal information such as device data and usage information to provide relevant ads.</li>
   </ul>
 
   <h2>Network & Notifications</h2>
@@ -37,7 +37,7 @@
   </ul>
 
   <h2>Third Parties</h2>
-  <p>No third-party SDKs for analytics or advertising are integrated.</p>
+  <p>The app integrates the Google Mobile Ads SDK for displaying ads. For more information, please see <a href="https://policies.google.com/privacy" target="_blank">Google’s Privacy Policy</a>.</p>
 
   <h2>Children’s Privacy</h2>
   <p>The app is intended for a general audience. We do not knowingly collect data from children.</p>
@@ -50,19 +50,19 @@
 
   <div class="lang">
     <h1>Gizlilik Politikası (TR)</h1>
-    <p>Son güncelleme: Weekly Game Drop — Weekly Game Drop herhangi bir kişisel veriyi toplamaz, saklamaz veya paylaşmaz.</p>
+    <p>Son güncelleme: Weekly Game Drop</p>
 
     <h2>Genel Bakış</h2>
-    <p><strong>Weekly Game Drop</strong>, Epic Games’in herkese açık uç noktalarından (proxy aracılığıyla) haftalık ücretsiz oyun listesini gösteren resmi olmayan bir hayran uygulamasıdır. Uygulama hesap oluşturma gerektirmez ve kişisel bilgi toplamaz.</p>
+    <p><strong>Weekly Game Drop</strong>, Epic Games’in herkese açık uç noktalarından (proxy aracılığıyla) haftalık ücretsiz oyun listesini gösteren resmi olmayan bir hayran uygulamasıdır. Uygulama hesap oluşturma gerektirmez ve doğrudan kişisel bilgi toplamaz. Ancak uygulamada Google Mobile Ads SDK üzerinden reklam gösterilmektedir.</p>
 
     <h2>Veri Toplama</h2>
     <ul>
-      <li><strong>Kişisel Veri:</strong> Toplanmaz.</li>
+      <li><strong>Kişisel Veri:</strong> Uygulama tarafından doğrudan toplanmaz.</li>
       <li><strong>Hassas Veri:</strong> Toplanmaz.</li>
       <li><strong>Konum:</strong> Toplanmaz.</li>
-      <li><strong>Cihaz veya Diğer Kimlikler:</strong> Toplanmaz.</li>
+      <li><strong>Cihaz veya Diğer Kimlikler:</strong> Google Mobile Ads SDK, reklam sunumu ve sahtekarlığın önlenmesi amacıyla Reklam Kimliği (Advertising ID) gibi cihaz tanımlayıcılarını kullanabilir.</li>
       <li><strong>Uygulama İçi Analitik:</strong> Kullanılmaz.</li>
-      <li><strong>Reklam:</strong> Kullanılmaz.</li>
+      <li><strong>Reklam:</strong> Uygulama, Google Mobile Ads (AdMob) hizmetini kullanarak reklam gösterir. Bu hizmet, cihaz bilgileri ve kullanım verileri gibi kişisel olmayan verileri toplayabilir.</li>
     </ul>
 
     <h2>Ağ & Bildirimler</h2>
@@ -72,7 +72,7 @@
     </ul>
 
     <h2>Üçüncü Taraflar</h2>
-    <p>Analitik veya reklam için üçüncü taraf SDK’lar entegre edilmemiştir.</p>
+    <p>Uygulama, reklam gösterimi için Google Mobile Ads SDK’yı entegre eder. Daha fazla bilgi için <a href="https://policies.google.com/privacy" target="_blank">Google Gizlilik Politikası</a>’na bakınız.</p>
 
     <h2>Çocukların Gizliliği</h2>
     <p>Uygulama genel kitleye yöneliktir. Çocuklardan bilerek veri toplamıyoruz.</p>
